# tucker-ffn

./: .gitignore  README.md  TASK.md  TASK_TWO.md  WRITING_PAPER.md  pyproject.toml  run_experiments.py  writing_instructions.md
docs/: literature.md  log.md  scrapped-workshop.txt  swiglu-idea.txt  todo.md  trillium.md
experiments/: assemble_figures.py  exp01_sanity_check.py  exp02_routing_stats.py  exp03_channel_sparsity.py  exp04_routing_ablation.py  exp05_top_activating_tokens.py  exp06_layerwise_ablation.py  exp07_interpolation_sweep.py  exp08_channel_subset_ablation.py  exp09_pairing_permutation.py  exp09b_noop_control.py  exp10_svd_construction.py  exp10_synthetic_fitting.py  exp11_train_lm.py  exp12_trained_tucker_analysis.py  exp13_diagonal_projection.py  exp14_distillation.py  exp14b_tucker_teacher_distillation.py  exp15_core_visualization.py  exp17_robustness.py  exp18_ll1_synthetic.py  exp19_interp_proxies.py  exp20_induction.py  exp20b_tucker_mechanism.py  exp21_qwen_distill.py  exp22_factor_stability.py  exp23_structured_distill.py  exp24_superposition.py  exp25_spectra.py  exp26_qwen_contexts.py  exp_layerwise_alpha.py
lib/: __init__.py  activations.py  eval_utils.py  interp_metrics.py  ll1_ffn.py  lm.py  log_utils.py  model_utils.py  permutation.py  plot_style.py  routing.py  runner.py  sparsity.py  structured_ffn.py  structured_linear.py  tucker_ffn.py
paper/: exp11_discussion.tex  main.tex  refs.bib  related_work.tex
results/: SUMMARY.md  ablation_results.json  channel_sparsity_stats.npz  channel_subset_ablation.json  interpolation_sweep.json  layerwise_ablation.json  routing_stats.npz  (+1 more)
(+81 files in other folders)
