[project]
name = "tucker-ffn"
version = "0.1.0"
description = "empirical validation of routed-cp decomposition of swiglu ffns"
requires-python = ">=3.10"
# torch pinned to 2.6.0+cu124 -- runpod's driver (12.9) does not match
# torch 2.11+cu130's nccl 2.28 ABI requirements (libtorch_cuda.so refs
# ncclCommWindowDeregister which only exists in nccl >= 2.27 shipped
# inside cu13 builds).
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "transformers",
    "datasets",
    "numpy",
    "matplotlib",
]

[tool.uv]
# disable build-isolation for torch — uv has special handling for
# pre-built wheels which is what we want here.
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
